--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
           <div class="text-two">I'm Marlon <span>Carbonilla</span></div>
         </div>
         <div class="left">
-          <img src="Resources/310848388_1482781845560504_3686230693534642505_n.jpg" alt="" />
-          <img src="Resources/310848388_1482781845560504_3686230693534642505_n.jpg" />
+          <img src="Resources/unamed.png" alt="" />
+          <img src="Resources/unamed.png" />
         </div>
       </div>
     </section>
